IdentityApp/K8s/database-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: identitydb
spec:
    type: ExternalName
    externalName: benefits-server.database.windows.net
