IdentityApp/K8s/identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: identity-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: identity
    template:
        metadata:
            labels:
                app: identity
        spec:
            containers:
                - name: identity
                  image: mtomazelli/identityapp
---

apiVersion: v1
kind: Service
metadata:
    name: identity-srv
spec:
    selector:
        app: identity
    ports:
        - name: identity
          protocol: TCP
          port: 5000
          targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: identity-srv-dev
spec:
    type: NodePort
    selector:
        app: identity
    ports:
        - name: identity # Aqui pode ser qualquer nome, não precisa ser o mesmo do serviço
          protocol: TCP
          port: 5000        # Porta que será aberta pelo próprio servico para se comunicar, por exemplo, com o navegador
          targetPort: 80    # Porta que esta aberta no container
